Add tokio-test to allow a runner to run on tests.

--- a/ravendb-rs/Cargo.toml
+++ b/ravendb-rs/Cargo.toml
@@ -7,3 +7,6 @@ edition = "2021"
 
 [dependencies]
 tokio = { version = "1.18.2", features = ["full"] }
+
+[dev-dependencies]
+tokio-test = { version = "0.4" }
