--- a/ravendb-rs/Cargo.toml
+++ b/ravendb-rs/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 
 [dependencies]
 anyhow = "1.0.58"
+reqwest = { version = "0.11.11", features = ["rustls-tls"] }
 tokio = { version = "1.18.2", features = ["full"] }
 url = { version = "2.2.2", features = ["serde"] }
 
