--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,3 +1,3 @@
 [workspace]
-default-members = ["raven-test"]
-members = ["ravendb-rs", "raven-test", "xtask"]
+default-members = ["ravendb-rs"]
+members = ["ravendb-rs", "xtask"]
