--- a/ravendb-rs/Cargo.toml
+++ b/ravendb-rs/Cargo.toml
@@ -3,14 +3,16 @@ name = "ravendb-client"
 version = "0.1.0"
 edition = "2021"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+[[example]]
+name = "demo"
 
 [dependencies]
-anyhow = "1.0.58"
-dyn-clone = "1.0.6"
+anyhow = "1.0.65"
+dyn-clone = "1.0.9"
 reqwest = { version = "0.11.11", features = ["rustls-tls"] }
-tokio = { version = "1.18.2", features = ["full"] }
-url = { version = "2.2.2", features = ["serde"] }
+thiserror = "1.0.35"
+tokio = { version = "1.21.1", features = ["full"] }
+url = { version = "2.3.1", features = ["serde"] }
 
 [dev-dependencies]
 tokio-test = { version = "0.4" }
