--- a/ravendb-rs/Cargo.toml
+++ b/ravendb-rs/Cargo.toml
@@ -11,8 +11,12 @@ anyhow = "1.0.65"
 dyn-clone = "1.0.9"
 reqwest = { version = "0.11.11", features = ["rustls-tls"] }
 thiserror = "1.0.35"
+tracing = { version = "0.1.36", features = ["log"] }
 tokio = { version = "1.21.1", features = ["full"] }
 url = { version = "2.3.1", features = ["serde"] }
 
 [dev-dependencies]
 tokio-test = { version = "0.4" }
+tracing-bunyan-formatter = "0.3.3"
+tracing-log = "0.1.3"
+tracing-subscriber = { version = "0.3.15", features = ["registry", "env-filter"] }
