--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,3 +1,3 @@
 [workspace]
-default-members = ["ravendb-rs"]
-members = ["ravendb-rs", "xtask"]
+default-members = ["ravendb_client"]
+members = ["ravendb_client", "xtask"]
