--- a/ravendb_client/Cargo.toml
+++ b/ravendb_client/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "ravendb-client"
+name = "ravendb_client"
 version = "0.1.0"
 edition = "2021"
 
@@ -18,6 +18,7 @@ tracing = { version = "0.1.36", features = ["log"] }
 tokio = { version = "1.21.1", features = ["full"] }
 url = { version = "2.3.1", features = ["serde"] }
 rand = "0.8.5"
+tracing-tree = "0.2.1"
 
 [dev-dependencies]
 tokio-test = { version = "0.4" }
