--- a/ravendb_client/Cargo.toml
+++ b/ravendb_client/Cargo.toml
@@ -19,6 +19,8 @@ tokio = { version = "1.21.1", features = ["full"] }
 url = { version = "2.3.1", features = ["serde"] }
 rand = "0.8.5"
 tracing-tree = "0.2.1"
+serde = { version = "1.0.144", features = ["derive"] }
+serde_json = "1.0.85"
 
 [dev-dependencies]
 tokio-test = { version = "0.4" }
