--- a/ravendb_client/Cargo.toml
+++ b/ravendb_client/Cargo.toml
@@ -20,6 +20,7 @@ url = { version = "2.3.1", features = ["serde"] }
 rand = "0.8.5"
 serde = { version = "1.0.144", features = ["derive"] }
 serde_json = "1.0.85"
+uuid = { version = "1.1.2", features = ["serde", "v4"] }
 
 [dev-dependencies]
 tracing-tree = "0.2.1"
