--- a/ravendb_client/Cargo.toml
+++ b/ravendb_client/Cargo.toml
@@ -12,7 +12,7 @@ name = "sandbox"
 [dependencies]
 anyhow = "1.0.65"
 dyn-clone = "1.0.9"
-reqwest = { version = "0.11.11", features = ["rustls-tls"] }
+reqwest = { version = "0.11.11", features = ["rustls-tls","json"] }
 thiserror = "1.0.35"
 tracing = { version = "0.1.36", features = ["log"] }
 tokio = { version = "1.21.1", features = ["full"] }
