--- a/ravendb_client/Cargo.toml
+++ b/ravendb_client/Cargo.toml
@@ -27,3 +27,4 @@ tracing-tree = "0.2.1"
 tokio-test = { version = "0.4.2" }
 tracing-log = "0.1.3"
 tracing-subscriber = { version = "0.3.15", features = ["registry", "env-filter"] }
+tracing-bunyan-formatter = "0.3.3"
