--- a/ravendb_client/Cargo.toml
+++ b/ravendb_client/Cargo.toml
@@ -23,7 +23,7 @@ serde_json = "1.0.85"
 uuid = { version = "1.1.2", features = ["serde", "v4"] }
 
 [dev-dependencies]
-tracing-tree = "0.2.1"
+#tracing-tree = "0.2.1"
 tokio-test = { version = "0.4.2" }
 tracing-log = "0.1.3"
 tracing-subscriber = { version = "0.3.15", features = ["registry", "env-filter"] }
