--- a/ravendb_client/Cargo.toml
+++ b/ravendb_client/Cargo.toml
@@ -21,6 +21,7 @@ rand = "0.8.5"
 serde = { version = "1.0.145", features = ["derive"] }
 serde_json = "1.0.85"
 uuid = { version = "1.1.2", features = ["serde", "v4"] }
+wiremock = "0.5.14"
 
 [dev-dependencies]
 #tracing-tree = "0.2.1"
